QTBUG-19564 QGLSceneNode::setPickNode crash

Check before dereferencing passed in value

Change-Id: Ib6596d914fe89c27d1f2e927b6cb56588f65dd8a
Reviewed-on: http://codereview.qt-project.org/6296
Sanity-Review: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Patrick Burke <patrick.burke@nokia.com>